--- a/q_learning_global.ipynb
+++ b/q_learning_global.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "# import data\n",
     "\n",
-    "choices_full = np.loadtxt('data/full_action_set.csv', delimiter=',')\n",
-    "rewards_full = np.loadtxt('data/full_reward_set.csv', delimiter=',')"
+    "choices_full = np.loadtxt('data/mohanta2022/full_action_set.csv', delimiter=',')\n",
+    "rewards_full = np.loadtxt('data/mohanta2022/full_reward_set.csv', delimiter=',')"
    ]
   },
   {
