--- a/cognitive_analysis.ipynb
+++ b/cognitive_analysis.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -84,21 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"None of [Int64Index([  0,   1,   2,   3,   4,   9,  10,  11,  12,  14,\\n            ...\\n            496, 497, 498, 499, 500, 501, 503, 504, 505, 506],\\n           dtype='int64', length=336)] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yj/5_b3w2q176x67w94977kdrx80000gn/T/ipykernel_65387/2524109657.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mchoice_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchoice_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mreward_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreward_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{}/{} ({}) flies passed quality control\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchoice_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{:0.2f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchoice_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3510\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3511\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_indexer_strict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"columns\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3512\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3513\u001b[0m         \u001b[0;31m# take() does not accept boolean indexers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5794\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5795\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5796\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raise_if_missing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5797\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5798\u001b[0m         \u001b[0mkeyarr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5854\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0muse_interval_msg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5855\u001b[0m                     \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5856\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"None of [{key}] are in the [{axis_name}]\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5857\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5858\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Int64Index([  0,   1,   2,   3,   4,   9,  10,  11,  12,  14,\\n            ...\\n            496, 497, 498, 499, 500, 501, 503, 504, 505, 506],\\n           dtype='int64', length=336)] are in the [columns]\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "336/507 (66.27) flies passed quality control\n"
      ]
     }
    ],
@@ -131,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -226,17 +219,17 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>exp56.csv</td>\n",
+       "      <th>331</th>\n",
+       "      <td>exp49_reciprocal.csv</td>\n",
        "      <td>15</td>\n",
-       "      <td>../data/45hr_starvation_deepmind_2023-07-05_13-28</td>\n",
-       "      <td>2023-07-05 13:38:38</td>\n",
-       "      <td>2023-07-03 17:00:00</td>\n",
+       "      <td>../data/45hr_starvation_deepmind_2023-06-29_14-00</td>\n",
+       "      <td>2023-06-29 14:01:08</td>\n",
+       "      <td>2023-06-27 17:00:00</td>\n",
        "      <td>MHO 1:1000</td>\n",
        "      <td>HAL 1:1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
+       "      <th>332</th>\n",
        "      <td>exp43_reciprocal.csv</td>\n",
        "      <td>15</td>\n",
        "      <td>../data/46hr_starvation_deepmind_2023-06-14_13-48</td>\n",
@@ -246,7 +239,7 @@
        "      <td>HAL 1:1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>504</th>\n",
+       "      <th>333</th>\n",
        "      <td>exp49.csv</td>\n",
        "      <td>15</td>\n",
        "      <td>../data/46hr_starvation_deepmind_2023-06-15_13-48</td>\n",
@@ -256,7 +249,7 @@
        "      <td>HAL 1:1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>505</th>\n",
+       "      <th>334</th>\n",
        "      <td>exp38_reciprocal.csv</td>\n",
        "      <td>15</td>\n",
        "      <td>../data/46hr_Starvation_deepmind_2023-06-22_14-20</td>\n",
@@ -266,7 +259,7 @@
        "      <td>HAL 1:1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>506</th>\n",
+       "      <th>335</th>\n",
        "      <td>exp46.csv</td>\n",
        "      <td>15</td>\n",
        "      <td>../data/46hr_starvation_deepmind_2023-06-28_13-26</td>\n",
@@ -277,7 +270,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>507 rows × 7 columns</p>\n",
+       "<p>336 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -288,11 +281,11 @@
        "3                exp5.csv      0   \n",
        "4               exp36.csv      0   \n",
        "..                    ...    ...   \n",
-       "502             exp56.csv     15   \n",
-       "503  exp43_reciprocal.csv     15   \n",
-       "504             exp49.csv     15   \n",
-       "505  exp38_reciprocal.csv     15   \n",
-       "506             exp46.csv     15   \n",
+       "331  exp49_reciprocal.csv     15   \n",
+       "332  exp43_reciprocal.csv     15   \n",
+       "333             exp49.csv     15   \n",
+       "334  exp38_reciprocal.csv     15   \n",
+       "335             exp46.csv     15   \n",
        "\n",
        "                                                Folder Experiment Start Time  \\\n",
        "0    ../data/40hr_starvation_deepmind_2023-05-11_09-34   2023-05-11 09:35:12   \n",
@@ -301,11 +294,11 @@
        "3    ../data/41hr_starvation_deepmind_2023-05-25_10-07   2023-05-25 10:10:42   \n",
        "4    ../data/41hr_starvation_deepmind_2023-06-09_09-45   2023-06-09 09:46:24   \n",
        "..                                                 ...                   ...   \n",
-       "502  ../data/45hr_starvation_deepmind_2023-07-05_13-28   2023-07-05 13:38:38   \n",
-       "503  ../data/46hr_starvation_deepmind_2023-06-14_13-48   2023-06-14 13:50:06   \n",
-       "504  ../data/46hr_starvation_deepmind_2023-06-15_13-48   2023-06-15 13:49:48   \n",
-       "505  ../data/46hr_Starvation_deepmind_2023-06-22_14-20   2023-06-22 14:22:30   \n",
-       "506  ../data/46hr_starvation_deepmind_2023-06-28_13-26   2023-06-28 13:29:31   \n",
+       "331  ../data/45hr_starvation_deepmind_2023-06-29_14-00   2023-06-29 14:01:08   \n",
+       "332  ../data/46hr_starvation_deepmind_2023-06-14_13-48   2023-06-14 13:50:06   \n",
+       "333  ../data/46hr_starvation_deepmind_2023-06-15_13-48   2023-06-15 13:49:48   \n",
+       "334  ../data/46hr_Starvation_deepmind_2023-06-22_14-20   2023-06-22 14:22:30   \n",
+       "335  ../data/46hr_starvation_deepmind_2023-06-28_13-26   2023-06-28 13:29:31   \n",
        "\n",
        "         Starvation Time      Odor 1      Odor 2  \n",
        "0    2023-05-09 17:30:00  MHO 1:1000  HAL 1:1000  \n",
@@ -314,22 +307,22 @@
        "3    2023-05-23 17:25:00  MHO 1:1000  HAL 1:1000  \n",
        "4    2023-06-07 17:00:00  MHO 1:1000  HAL 1:1000  \n",
        "..                   ...         ...         ...  \n",
-       "502  2023-07-03 17:00:00  MHO 1:1000  HAL 1:1000  \n",
-       "503  2023-06-12 16:00:00  MHO 1:1000  HAL 1:1000  \n",
-       "504  2023-06-13 15:45:00  MHO 1:1000  HAL 1:1000  \n",
-       "505  2023-06-20 16:00:00  MHO 1:1000  HAL 1:1000  \n",
-       "506  2023-06-26 15:49:00  MHO 1:1000  HAL 1:1000  \n",
+       "331  2023-06-27 17:00:00  MHO 1:1000  HAL 1:1000  \n",
+       "332  2023-06-12 16:00:00  MHO 1:1000  HAL 1:1000  \n",
+       "333  2023-06-13 15:45:00  MHO 1:1000  HAL 1:1000  \n",
+       "334  2023-06-20 16:00:00  MHO 1:1000  HAL 1:1000  \n",
+       "335  2023-06-26 15:49:00  MHO 1:1000  HAL 1:1000  \n",
        "\n",
-       "[507 rows x 7 columns]"
+       "[336 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metadata"
+    "experiment"
    ]
   },
   {
